# topology-programming

./: .coveragerc  .gitignore  .gitmodules  .pre-commit-config.yaml  AUTHORS.rst  CONTRIBUTING.rst  KNOWLEDGE_INDEX.md  Khoa-read-this.md  LICENSE.txt  Makefile  README.md  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml
data/NOC/: aggregate_logs_to_graph.py  interface_log_parser.py  interface_parser.py  sox.json
data/NOC/ampath.edu.iu.grnoc.routerproxy/: AMPATH_Ciena_6500-7_Packet-Optical_Shelf_Assembly-BocaRaton-FL  AMPATH_Ciena_6500-7_Packet-Optical_Shelf_Assembly-Miami-FL  AMPATH_Ciena_Waveserver_Ai_BocaRaton-FL  AMPATH_Ciena_Waveserver_Ai_Miami-FL
data/NOC/sox.edu.iu.grnoc.routerproxy/: Interface_clusters.txt  notes.txt
data/graphs/dot/: Comcast.dot
data/graphs/gml/: CRL.gml  Comcast.gml  surfNet.gml
data/hosts/: Comcast.hosts
data/reports/: demand_scale_summary.csv  final.csv
data/traffic/: ANS_base_tm_0.00e+00_gravity.txt  ANS_coremelt_every_link_2.00e+11.txt  ANS_coremelt_links-2_volume-2.00e+11.txt  ANS_coremelt_links-3_volume-2.00e+11.txt  ANS_flash_crowd_meta.csv  CRL_Cormelt_meta.txt  CRL_base_tm_0.00e+00_gravity.txt  CRL_base_tm_1.00e+11_gravity.txt  CRL_coremelt_every_link_2.00e+11.txt  CRL_coremelt_every_link_2.50e+11.txt  CRL_coremelt_every_link_3.00e+11.txt  CRL_coremelt_links-3_volume-2.00e+11.txt  CRL_flash_crowd_meta.csv  background-plus-flashcrowd_Comcast-tm  background_Comcast-tm  bellCanada_base_tm_0.00e+00_gravity.txt  bellCanada_coremelt_every_link_2.00e+11.txt  bellCanada_flash_crowd_meta.csv  sprint.txt  sprint_coremelt_every_link_2.00e+11.txt  sprint_flash_crowd_meta.csv  surfNet_coremelt_every_link_2.00e+11.txt  surfNet_flash_crowd_meta.csv
data/txp/: ANS_1.txt  ANS_2.txt  ANS_3.txt  ANS_4.txt  ANS_5.txt  ANS_7.txt  ANS_8.txt  CRL_1.txt  CRL_14.txt  CRL_2.txt  CRL_3.txt  CRL_4.txt  CRL_5.txt  CRL_6.txt  CRL_7.txt  CRL_8.txt  bellCanada_0.txt  bellCanada_1.txt  bellCanada_11.txt  bellCanada_14.txt  bellCanada_16.txt  bellCanada_18.txt  bellCanada_19.txt  bellCanada_2.txt  bellCanada_3.txt  bellCanada_4.txt  bellCanada_5.txt  bellCanada_6.txt  bellCanada_7.txt  bellCanada_8.txt  sprint_0.txt  sprint_1.txt  surfNet_0.txt  surfNet_1.txt  surfNet_12.txt  surfNet_13.txt  surfNet_18.txt  surfNet_2.txt  surfNet_21.txt  surfNet_3.txt  (+5 more)
docs/: conf.py  index.rst  requirements.txt
docs/knowledge/: README.md  architecture.md  data-and-environment.md  experiments.md  recent-direction.md
logs/: process_1221310_log.txt  process_1223514_log.txt  process_1223853_log.txt  process_1224200_log.txt  process_1224492_log.txt  process_1225125_log.txt  process_1225581_log.txt  process_1225820_log.txt  process_1226137_log.txt  process_1226392_log.txt  process_1227142_log.txt  process_1235072_log.txt  process_1236095_log.txt  process_1239727_log.txt  process_1241136_log.txt  process_1241378_log.txt  process_1242249_log.txt  process_1243582_log.txt  process_1243777_log.txt  process_1244598_log.txt  process_1244966_log.txt  process_1248235_log.txt  process_1248554_log.txt  process_1249940_log.txt  process_1254613_log.txt  process_1256323_log.txt  process_1265246_log.txt  process_1265656_log.txt  process_1266597_log.txt  process_1266841_log.txt  process_1267467_log.txt  process_1267827_log.txt  process_1268372_log.txt  process_1268780_log.txt  process_1269018_log.txt  process_1269427_log.txt  process_1269958_log.txt
scripts/: TEvsTBEvsGreyLambda.py  breaking_point.py  check-env.sh  compare_graphs.py  experiment.py  experiment_mapped.py  experiment_params.py  find_completed_experiments.py  onset_eval_tdsc.py  setup-yates.sh  smoke_ans_ecmp.py  traceroute-reconstruction-campus.sh
scripts/Doppler/: aggregate.sh  diff_compare.sh  doppler.batch  exp-v2.py  experiment.py  experiment_params.py  similarity_counter_example.py
scripts/Doppler/batch/: CEN.batch
scripts/Doppler/notebooks/: doppler.ipynb
scripts/HotNets23/: breaking_point.py  fetch-traffic.sh  hdumb-topo-manifest.txt  tierd-topo-manifest.txt  traffic-manifest.txt
scripts/TDSC/: Multi_attack.ipynb  command_writer.py  crossfire.ipynb  crossfire_consumer.py  crossfire_producer.py  link_x_cap_consumer.py  link_x_cap_main.py  link_x_cap_producer.py  link_x_cap_worker.py  multi-attack-report.ipynb  num_paths_plt.py  onset_eval_tdsc.py  plot-crossfire-from-dat-files.py  plot_crossfire.py  plot_link_change.py  plot_rolling.py  rolling_consumer.py  rolling_producer.py  run.sh  run_writer.sh  sim_event.py  time_plotter.py  trash.py
scripts/TDSC/legacy/: README.md  ShakeRoute_eval.py  coremelt_every_link_eval.py  crossfire.sh  crossfire_every_node_eval.py  experiment1.sh  (+9 more)
scripts/TNSM/: TEvsTBEvsGreyLambda.py  experiment.py  experiment_params.py  greylambda_vs_bvt.py
scripts/bash/: collect_MaxExpCongestion-rolling.sh  collect_MaxExpCongestion.sh  collect_topos.sh  extract_graphs_and_paths.sh
scripts/batch/: TBE.batch  TE.batch  comcast_test2.batch  greylambda.batch  stragglers.batch
scripts/patches/: frenetic-tcpip-checksum.patch
src/notebooks/: MLU_bar.ipynb  barplot-campus.ipynb  barplot-regional.ipynb  demand_factor_results.ipynb  doppler_demand_scale.ipynb
src/onset/: __init__.py  add_link_and_reroute.py  alpwolf.py  attacker.py  base_types.py  constants.py  defender.py  doppler.py  graph_permutations.py  gurobi_doppler.py  gurobi_hotnets.py  gurobi_optimization.py  gurobi_optimization_v1.py  handlers.py  hotnets_optimization.py  hysteresis.py  mcf_net_difference.py  method_registry.py  net_recon_defense.py  net_sim.py  network_model.py  open_doppler.py  optimization.py  optimization_two.py  preprocessing.py  rank_aggregator.py  rank_transponder_alloc.py  reporter.py  similarity.py  similarity_bars.py  simple_topo_examples.py  simularity.py  simulator.py  validation.py
tests/: conftest.py  generate_flows_test.py  network_model_test.py  sim_import_json_test.py  te_engine_test.py  test_base_types.py  test_handlers.py  test_method_registry.py  test_open_doppler.py  test_reporter.py  test_simulation_pipeline.py  test_simulator_dispatch.py  test_validation.py
(+57 files in other folders)
