[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "topology-programming"
description = "Simulator for optical topology programming research"
authors = [{name = "mattall", email = "mhhall92@gmail.com"}]
license = {text = "MIT"}
requires-python = ">=3.9"
readme = "README.md"
version = "0.1.0"

dependencies = [
    "networkx>=2.6.2",
    "numpy>=1.24.3",
    "matplotlib>=3.4.1",
    "highspy",
    "scipy>=1.10.1",
    "pandas>=1.2.5",
    "seaborn>=0.12.2",
]

[project.optional-dependencies]
testing = [
    "pytest",
    "pytest-cov",
]
dev = [
    "pylint>=2.8.3",
    "autopep8>=1.5.7",
    "isort>=5.8.0",
    "pycodestyle>=2.7.0",
]

[project.urls]
Documentation = "https://github.com/mattall/topology-programming/blob/main/KNOWLEDGE_INDEX.md"
Source = "https://github.com/mattall/topology-programming"

[tool.setuptools]
package-dir = {"" = "src"}
packages = {find = {where = ["src"], exclude = ["tests"]}}
include-package-data = true

[tool.pytest.ini_options]
addopts = "--cov onset --cov-report term-missing --verbose"
testpaths = ["tests"]
norecursedirs = ["dist", "build", ".tox"]

[tool.flake8]
max_line_length = 88
extend_ignore = "E203,W503"
exclude = ".tox,build,dist,.eggs,docs/conf.py"
