[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "topology-programming"
description = "Simulator for optical topology programming research"
authors = [{name = "mattall", email = "mhhall92@gmail.com"}]
license = {text = "MIT"}
requires-python = ">=3.11"
readme = "README.md"
version = "0.1.0"

dependencies = [
    "networkx>=2.6.2",
    "numpy>=1.24.3",
    "matplotlib>=3.4.1",
    "highspy",
    "scipy>=1.10.1",
    "pandas>=1.2.5",
    "seaborn>=0.12.2",
]

[project.optional-dependencies]
testing = [
    "pytest",
    "pytest-cov",
]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=3.7.0",
]

[project.urls]
Documentation = "https://github.com/mattall/topology-programming/blob/main/KNOWLEDGE_INDEX.md"
Source = "https://github.com/mattall/topology-programming"

[tool.setuptools]
package-dir = {"" = "src"}
packages = {find = {where = ["src"], exclude = ["tests"]}}
include-package-data = true

[tool.pytest.ini_options]
addopts = "--cov onset --cov-report term-missing --verbose"
testpaths = ["tests"]
norecursedirs = ["dist", "build", ".tox"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = false
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
exclude = "vendor/|build/|\\.tox/"

